[tool.poetry]
name = "imgtobraille"
version = "0.3.0"
description = "Create braille unicode representations of images, braille art."
authors = ["tomp2 <kamaleen0@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tomp2/imgtobraille"
repository = "https://github.com/tomp2/imgtobraille"
documentation = "https://github.com/tomp2/imgtobraille"
keywords = [
    "braille art",
    "numba",
    "dithering",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numba = "^0.54.1"
natsort = "^8.0.0"
opencv-python = "4.5.2.54"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
natsort = "8.0.0"
numba = "0.54.1"
opencv-python = "4.5.2.54"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "imgtobraille.__main__:main"

[tool.poetry.urls]
issues = "https://github.com/tomp2/imgtobraille/issues"